--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,31 +1,21 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="table-width">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
+    <!-- timezone Column -->
+    <ng-container matColumnDef="rates">
+      <th mat-header-cell *matHeaderCellDef> {{effetiveName}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+    </ng-container>
 
-  <!-- position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> N ° </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
+    <!-- variation Column -->
+    <ng-container matColumnDef="timestamp">
+      <th mat-header-cell *matHeaderCellDef> Interval {{interval}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+    </ng-container>
 
-  <!-- symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Nome </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
 
-  <!-- timezone Column -->
-  <ng-container matColumnDef="timezone">
-    <th mat-header-cell *matHeaderCellDef> Timezone </th>
-    <td mat-cell *matCellDef="let element"> {{element.timezone}} </td>
-  </ng-container>
-
-  <!-- variation Column -->
-  <ng-container matColumnDef="variation">
-    <th mat-header-cell *matHeaderCellDef> Variação </th>
-    <td mat-cell *matCellDef="let element"> {{element.variation}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
 
