git commit -m "Added pagination and ng2 chart"

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
           <mat-icon>dialpad</mat-icon>
           <span>Informações da moeda</span>
         </button>
-        <button mat-menu-item disabled>
+        <button mat-menu-item [routerLink]="['/graphics-x']" routerLinkActive="router-link-active" >
           <mat-icon>voicemail</mat-icon>
           <span>Gráficos</span>
         </button>
